# DomeLauncher

./: .env.example  .gitignore  AGENTS.md  README.md  bun.bat  package-lock.json  package.json  vite.config.ts
.github/workflows/: release-launcher.yml
src/: App.css  App.tsx  iconesPixelados.tsx  index.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: aplicacao.rs  auth.rs  auth_sisu.rs  discord_social.rs  launcher.rs  lib.rs  skin.rs
src-tauri/src/aplicacao/: bootstrap.rs  importacao_exportacao.rs  instancias_basicas.rs  instancias_criacao.rs  lancamento_jogo.rs  mods_conteudo.rs
src-tauri/src/comandos/: configuracoes_java.rs  instancia_sistema.rs  logs_instancia.rs  mod.rs  modpacks.rs  noticias_minecraft.rs  presenca_discord.rs  social_launcher.rs
src/components/: CreateInstanceModal.tsx  CreatingInstancesOverlay.tsx  Explore.tsx  Favorites.tsx  HomePage.tsx  InstanceManager.tsx  LibraryPage.tsx  LoginModal.tsx  ProjetoDetalheModal.tsx  Settings.tsx  SkinManager.tsx  SkinPreviewRenderer.tsx  SocialSidebar.tsx
src/components/ui/: ContextMenu.css  ContextMenu.tsx
src/hooks/: useLauncher.ts
src/lib/: configuracaoSocial.ts
src/pages/instance/: Logs.tsx  Mods.tsx  Overview.tsx  README.md  Worlds.tsx  index.ts
src/stores/: creatingInstances.ts
