[package]
name = "dome-launcher"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "multipart"] }
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"
anyhow = "1.0.100"
directories = "6.0.0"
open = "5.3.3"
tauri-plugin-shell = "2.3.4"
urlencoding = "2.1.3"
zip = "2.2.2"
sha2 = "0.10.9"
base64 = "0.22.1"
rand = "0.8.5"
local-ip-address = "0.6.8"
p256 = { version = "0.13.2", features = ["ecdsa", "pem"] }
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
sysinfo = "0.30.5"
futures = "0.3"
quartz_nbt = { version = "0.2.9", features = ["serde"] }
hickory-resolver = "0.24.4"
discord-rich-presence = "0.2.5"
rusqlite = { version = "0.32.1", features = ["bundled"] }
